--- a/templates/book.html
+++ b/templates/book.html
@@ -43,6 +43,45 @@
   </style>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
+  <div class="container">
+    <!-- <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="logo2.png" alt="Logo" height="80" width="160" class="me-2">
+      <a href="index.html"> -->
+      <span class="fw-bold text-dark fs-3 nav-head">AeroViaX</span>
+      <a>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav align-items-center fs-5 fw-bold ">
+        <li class="nav-item"><a class="nav-link nav-it" href="../index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link nav-it" href="../about.html">About Us</a></li>
+
+        <!-- Services Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle nav-it" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Services
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="servicesDropdown">
+            <li><a class="dropdown-item fw-bold fs-6 p-2 mt-lg-auto" href="../agriculture.html">Agriculture</a></li>
+            <li><a class="dropdown-item fw-bold fs-6 p-2 mt-lg-auto" href="../photography.html">Aerial Photography</a></li>
+            <li><a class="dropdown-item fw-bold fs-6 p-2 mt-lg-auto" href="../mapping.html">Survey & Mapping</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item"><a class="nav-link nav-it" href="#contact">Contact</a></li>
+
+        <!-- Book Now Button -->
+        <li class="nav-item" id="nav-book-btn" style="display: none;">
+          <a class="btn btn-warning btn-sm ms-3 rounded-pill btn" href="templates/book.html" id="bookBtnInNav">Book Now</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <!-- Hero Section -->
 <section class="hero-section text-center text-white">
   <div class="hero-overlay"></div>
